--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -3,8 +3,6 @@ version: 1.5.{build}
 pull_requests:
   do_not_increment_build_number: false
 max_jobs: 2
-#skip_commits:
-#  message: CI produced files
 
 environment:
   access_token:
@@ -15,50 +13,50 @@ environment:
   APPVEYOR_RDP_PASSWORD: Np^VNSzJI5#OmRdUNqro2T9UVkCdZ
   TARGET_DB: tSQLt
   COV_REPORT: appveyor\sqlcover\Coverage.opencoverxml
-  
+
   matrix:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     MSSQL: SQL2019
     DB_INSTANCE: localhost\SQL2019
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_150
+    #LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_150
     LATEST: True
 
   # Azure SQL Env
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     MSSQL: AZURESQL
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_150
+    #LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_150
     TARGET_DB: expresssql
     DB_INSTANCE: expresssql.database.windows.net
     LATEST: False
     COV_REPORT: appveyor\sqlcover\Coverage_azuresql.opencoverxml
     AZURE_SQL_USER: lowlysa
     AzureSQL: True
-    
+
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     MSSQL: SQL2017
     DB_INSTANCE: localhost\SQL2017
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_140
+    #LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_140
     LATEST: False
     AzureSQL: False
-    
+
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     MSSQL: SQL2016
     DB_INSTANCE: localhost\SQL2016
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_130
+    #LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_130
     LATEST: False
     AzureSQL: False
-    
+
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     MSSQL: SQL2014
     DB_INSTANCE: localhost\SQL2014
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_120
+    #LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_120
     LATEST: False
     AzureSQL: False
-    
+
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     MSSQL: SQL2012SP1
     DB_INSTANCE: localhost\SQL2012SP1
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_110
+    #LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_110
     LATEST: False
     AzureSQL: False
 
@@ -72,6 +70,7 @@ clone_script:
   - cd %APPVEYOR_BUILD_FOLDER%
 
 install:
+  - ps: Install-Product node ''
   - ps: .\appveyor\install_dependencies.ps1
   - ps: .\appveyor\start_sqlserver.ps1
   - ps: .\appveyor\install_tsqlt.ps1
@@ -83,12 +82,11 @@ build_script:
 
 # Non-covered test run
 test_script:
-  - ps: .\appveyor\run_tsqllint.ps1
   - ps: .\appveyor\run_pester_tests.ps1
 
 for:
 # Latest SQL Server: Code cov & Upload
-- 
+-
   matrix:
     only:
       - LATEST: True
@@ -111,7 +109,7 @@ for:
     - ps: .\appveyor\push_git_changes.ps1
 
 # Azure SQL: No need to start SQL Server locally
--  
+-
   matrix:
     only:
       - AzureSQL: True
