Revert "move test setup into Pester"
This reverts commit b15984c173cca85fbbe0d767d0b48f318b3060da.

--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -75,6 +75,11 @@ install:
   - ps: .\appveyor\start_sqlserver.ps1
   - ps: .\appveyor\install_tsqlt.ps1
 
+build_script:
+  - ps: .\appveyor\generate_combined_script.ps1
+  - ps: .\appveyor\install_tool.ps1
+  - ps: .\appveyor\build_tsqlt_tests.ps1
+
 # Non-covered test run
 test_script:
   - ps: .\appveyor\run_pester_tests.ps1
@@ -89,7 +94,6 @@ for:
   # Setup codecov, SQL Cover
   before_test:
     - ps: .\appveyor\install_coverage_dependencies.ps1
-    - ps: choco install codecov --no-progress --limit-output | Out-Null
 
   # Run tests with SQL Cover analysis
   test_script:
