--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -3,6 +3,7 @@ version: 1.5.{build}
 pull_requests:
   do_not_increment_build_number: false
 max_jobs: 2
+build: off
 
 environment:
   access_token:
