combine dependency scripts

--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -89,7 +89,7 @@ for:
 
   # Setup codecov, SQL Cover
   before_test:
-    - ps: .\appveyor\install_coverage_dependencies.ps1
+    - ps: .\appveyor\install_dependencies.ps1 -CodeCoverage
     - ps: choco install codecov --no-progress --limit-output | Out-Null
 
   # Run tests with SQL Cover analysis
