--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -45,4 +45,6 @@ jobs:
       - name: Lint Code Base
         uses: docker://github/super-linter:v3.13.5
         env:
-          VALIDATE_MD: true
+          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_POWERSHELL: false
+          VALIDATE_SQL: false
