--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -46,4 +46,5 @@ jobs:
         uses: docker://github/super-linter:v3.13.5
         env:
           VALIDATE_MARKDOWN: true
+          VALIDATE_POWERSHELL: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
