--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -45,6 +45,6 @@ jobs:
       - name: Lint Code Base
         uses: docker://github/super-linter:v3.13.5
         env:
-          VALIDATE_ALL_CODEBASE: false
-          VALIDATE_POWERSHELL: false
-          VALIDATE_SQL: false
+          VALIDATE_MARKDOWN: true
+          VALIDATE_POWERSHELL: true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
