try to fix entrypoint perm

--- a/.github/actions/tsqllint-action/Dockerfile
+++ b/.github/actions/tsqllint-action/Dockerfile
@@ -11,11 +11,10 @@ LABEL "com.github.actions.color"="green"
 RUN apt-get -qq update \
     && apt-get -qq install libunwind8 \
     && yarn global add tsqllint
-#
-#RUN 
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
 COPY entrypoint.sh /entrypoint.sh
 
 # Code file to execute when the docker container starts up (`entrypoint.sh`)
+RUN chmod +x ./entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
