fix linter conf locations

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Lint Code Base
         uses: docker://github/super-linter:v3.13.5
         env:
+          LINTER_RULES_PATH: .github/linter-conf	
           VALIDATE_MARKDOWN: true
-          MARKDOWN_CONFIG_FILE: ./.github/conf/.markdown-lint.yml
           VALIDATE_POWERSHELL: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
