--- a/.github/workflows/tsqllint.yml
+++ b/.github/workflows/tsqllint.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           file-dir-1: '*.sql'
           file-dir-2: '*.sql'
-          config: './.github/conf/.tsqllintrc_150'
+          config: './.github/linter-conf/.tsqllintrc_150'
