--- a/.github/in-solidarity.yml
+++ b/.github/in-solidarity.yml
@@ -1,8 +1,9 @@
 
 ---
 # https://github.com/jpoehnelt/in-solidarity-bot
-rules:
-  master:
-    level: off  # off until if/when master branch is swapped for main
+#rules:
+#  master:
+#    level: off  
 ignore:
  - ".github/in-solidarity.yml"  # default
+ - "**/*.yml"
