fix env variable refs

--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -12,6 +12,7 @@ environment:
     secure: 'E5I+i+CQyj9EHusDrPSQKHRXmzmpTujYAoFxlvJjvSRSEQHHzqTBIFR1VuPbwLMi'
   AZURE_SQL_PASS:
     secure: 'rYm3nE1kwpbdE7QtyLb8CjvA1ENjY3usz3Qqskf1TXU='
+  CI_COMMIT_MSG: 'CI produced files'
 
   APPVEYOR_RDP_PASSWORD: Np^VNSzJI5#OmRdUNqro2T9UVkCdZ
   TARGET_DB: tSQLt
