--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -4,14 +4,15 @@ pull_requests:
   do_not_increment_build_number: false
 max_jobs: 2
 build: off
-skip_commits:
-  author: Appveyor
+# skip_commits:
+#   author: Appveyor
 
 environment:
   access_token:
     secure: 'E5I+i+CQyj9EHusDrPSQKHRXmzmpTujYAoFxlvJjvSRSEQHHzqTBIFR1VuPbwLMi'
   AZURE_SQL_PASS:
     secure: 'rYm3nE1kwpbdE7QtyLb8CjvA1ENjY3usz3Qqskf1TXU='
+  CI_COMMIT_MSG: 'CI produced files'
 
   APPVEYOR_RDP_PASSWORD: Np^VNSzJI5#OmRdUNqro2T9UVkCdZ
   TARGET_DB: tSQLt
@@ -66,6 +67,7 @@ clone_script:
   - git config --global core.safecrlf false
   - git clone -q --single-branch --branch=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% https://github.com/LowlyDBA/dba-multitool.git %APPVEYOR_BUILD_FOLDER%
   - cd %APPVEYOR_BUILD_FOLDER%
+  - ps: .\appveyor\skip_ci_commit.ps1
 
 install:
   - ps: Install-Product node ''
@@ -92,12 +94,10 @@ for:
   test_script:
     - ps: .\appveyor\run_pester_tests.ps1 -CodeCoverage
 
-  # Build markdown w/ sp_doc
+  # Build markdown with sp_doc
+  # Upload code coverage report, push generated files
   after_test:
     - ps: .\appveyor\generate_sample_markdown.ps1
-
-  # Upload code coverage report, push generated files
-  on_success:
     - codecov -f %COV_REPORT%
     - ps: .\appveyor\push_git_changes.ps1
 
