add indexes for tables
*  add `<br>` to safe list for markdown linter
* improve some variable naming and data type usage

--- a/.github/linter-conf/.markdown-lint.yml
+++ b/.github/linter-conf/.markdown-lint.yml
@@ -26,7 +26,7 @@ MD013:
   tables: false
 MD024: false
 MD033: 
-  allowed_elements: ["details", "summary", "img", "sub"]
+  allowed_elements: ["details", "summary", "img", "sub", "br"]
 
 
 
