--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,15 @@
     "markdownlint.config": {
         "MD024": false,
         "MD010": {
-            "code_blocks": false },
+            "code_blocks": false 
+        },
         "MD033": {
-            "allowed_elements": ["details", "summary", "img", "sub"] },
+            "allowed_elements": ["details", "summary", "img", "sub", "br"] 
+        },
         "MD013": {
             "code_blocks": false,
-            "tables": false}
+            "tables": false
+        }
     },
     "powershell.codeFormatting.trimWhitespaceAroundPipe": true,
     "powershell.codeFormatting.useCorrectCasing": true
