rdp for troubleshooting

--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -13,7 +13,6 @@ environment:
   AZURE_SQL_PASS:
     secure: 'rYm3nE1kwpbdE7QtyLb8CjvA1ENjY3usz3Qqskf1TXU='
   CI_COMMIT_MSG: 'CI produced files'
-
   APPVEYOR_RDP_PASSWORD: Np^VNSzJI5#OmRdUNqro2T9UVkCdZ
   TARGET_DB: tSQLt
   COV_REPORT: appveyor\sqlcover\Coverage.opencoverxml
@@ -99,6 +98,9 @@ for:
     - ps: .\appveyor\generate_sample_markdown.ps1
     - codecov -f %COV_REPORT%
     - ps: .\appveyor\push_git_changes.ps1
+
+  on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 # Azure SQL: No need to start SQL Server locally
 -
