further optimize tests

--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -21,7 +21,7 @@ environment:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     MSSQL: SQL2019
     DB_INSTANCE: localhost\SQL2019
-    LATEST: False
+    LATEST: True
 
   # Azure SQL Env
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
