--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -4,6 +4,8 @@ pull_requests:
   do_not_increment_build_number: false
 max_jobs: 2
 build: off
+matrix:
+  fast_finish: true
 
 environment:
   access_token:
@@ -16,8 +18,6 @@ environment:
   COV_REPORT: appveyor\sqlcover\Coverage.opencoverxml
 
   matrix:
-    fast_finish: true
-
   # Azure SQL Env
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     MSSQL: AZURESQL
@@ -54,7 +54,7 @@ environment:
     AzureSQL: False
 
     # Latest version pushes any changes to branch
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     MSSQL: SQL2019
     DB_INSTANCE: localhost\SQL2019
     LATEST: True
