--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -29,23 +29,23 @@ environment:
     AzureSQL: True
 
   # SQL Server Envs
-  # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-  #   MSSQL: SQL2017
-  #   DB_INSTANCE: localhost\SQL2017
-  #   LATEST: False
-  #   AzureSQL: False
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    MSSQL: SQL2017
+    DB_INSTANCE: localhost\SQL2017
+    LATEST: False
+    AzureSQL: False
 
-  # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-  #   MSSQL: SQL2016
-  #   DB_INSTANCE: localhost\SQL2016
-  #   LATEST: False
-  #   AzureSQL: False
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    MSSQL: SQL2016
+    DB_INSTANCE: localhost\SQL2016
+    LATEST: False
+    AzureSQL: False
 
-  # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-  #   MSSQL: SQL2014
-  #   DB_INSTANCE: localhost\SQL2014
-  #   LATEST: False
-  #   AzureSQL: False
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    MSSQL: SQL2014
+    DB_INSTANCE: localhost\SQL2014
+    LATEST: False
+    AzureSQL: False
 
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     MSSQL: SQL2012SP1
@@ -72,7 +72,7 @@ install:
   - ps: .\appveyor\install_dependencies.ps1
   - ps: .\appveyor\start_sqlserver.ps1
   - ps: .\appveyor\install_tsqlt.ps1
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+  # - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 # Non-covered test run
 test_script:
