--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -97,7 +97,7 @@ for:
   # Upload code coverage report, push generated files
   after_test:
     - ps: .\appveyor\generate_sample_markdown.ps1
-    - codecov -f %COV_REPORT%
+    - ps: .\..\codecov.exe -f %COV_REPORT%
     - ps: .\appveyor\push_git_changes.ps1
 
 #  on_finish:
