--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -45,7 +45,8 @@ jobs:
       - name: Lint Code Base
         uses: docker://github/super-linter:v3.13.5
         env:
-          LINTER_RULES_PATH: .github/linter-conf	
+          LINTER_RULES_PATH: .github/linter-conf
           VALIDATE_MARKDOWN: true
           VALIDATE_POWERSHELL: true
+          FILTER_REGEX_EXCLUDE: /github/workspace/*
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
