--- a/.github/actions/tsqlt/action.yml
+++ b/.github/actions/tsqlt/action.yml
@@ -31,4 +31,4 @@ runs:
           Version = "${{ inputs.version }}"
         }
 
-        ${{github.action_path}}/tsqlt.ps1 @params
+        ${{github.action_path}}/main.ps1 @params
