stop file to handle cross session issues

--- a/.github/actions/sqlcover/action.yml
+++ b/.github/actions/sqlcover/action.yml
@@ -17,7 +17,7 @@ inputs:
     description: "Whether to 'install,', 'start', or 'stop' SQLCover. Start includes install by default."
     required: true
   output-path:
-    description: "Path to output results to. Only used by the 'stop' action."
+    description: "Path to output results to. Only used by the 'start' action."
     required: false
     default: "$GITHUB_WORKSPACE/sqlcover"
 runs:
